--- a/assets/css.css
+++ b/assets/css.css
@@ -1,3 +1,34 @@
+:root {
+  --cols : 2;
+  --rows : 2;
+  --map-min-height: 600px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+}
+
+.widget {
+  margin: 1.5rem 0rem;
+}
+
+#main-plots {
+  flex: 1;
+}
+
+@media screen and (min-width: 1920px) {
+  #main-plots {
+    flex: 1;
+    display: grid;
+    grid-template-columns: repeat(var(--cols), 1fr);
+    grid-template-rows: auto repeat(var(--rows), 1fr);
+    gap : 1.5rem;
+    min-width: 0;
+  }
+}
+
 .maplibregl-ctrl-bottom-right {
   display: none;
 }
