--- a/assets/css.css
+++ b/assets/css.css
@@ -16,6 +16,7 @@ body {
 
 #main-plots {
   flex: 1;
+  max-width: 100vw;
 }
 
 @media screen and (min-width: 1920px) {
@@ -25,7 +26,6 @@ body {
     grid-template-rows: auto repeat(var(--rows), 1fr);
     gap : 1.5rem;
     max-width: 100vw;
-    max-height: 100vh;
   }
 }
 
