--- a/assets/css.css
+++ b/assets/css.css
@@ -17,6 +17,7 @@ body {
 #main-plots {
   flex: 1;
   max-width: 100vw;
+  max-height: 100vh;
 }
 
 @media screen and (min-width: 1920px) {
@@ -26,6 +27,7 @@ body {
     grid-template-rows: auto repeat(var(--rows), 1fr);
     gap : 1.5rem;
     max-width: 100vw;
+    max-height: 100vh;
   }
 }
 
