--- a/assets/css.css
+++ b/assets/css.css
@@ -14,22 +14,18 @@ body {
   margin: 1.5rem 0rem;
 }
 
-#main-plots {
+/* #main-plots {
   flex: 1;
-  max-width: 100vw;
-  max-height: 100vh;
-}
+} */
 
-@media screen and (min-width: 1920px) {
+/* @media screen and (min-width: 1920px) {
   #main-plots {
     display: grid;
     grid-template-columns: repeat(var(--cols), 1fr);
     grid-template-rows: auto repeat(var(--rows), 1fr);
     gap : 1.5rem;
-    max-width: 100vw;
-    max-height: 100vh;
   }
-}
+} */
 
 .maplibregl-ctrl-bottom-right {
   display: none;
